using System.Collections;
using System.Collections.Generic;
using UnityEngine;

using My1WeekGameSystems_ver2;

public class BattleGameLoopManager : GameLoopManager{
    
}
